--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,56 @@
-baseURL = "http://example.org/"
+baseURL = "www.intermezzio.github.io"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "Hugo Whisper Theme"
+theme = "hugo-whisper-theme"
+publishDir = "/docs"
+
+pygmentsCodeFences = true
+pygmentsCodefencesGuessSyntax = true
+pygmentsUseClasses = true
+
+[[menu.main]]
+    name = "Home"
+    url = "/"
+    weight = 1
+
+[[menu.main]]
+    name = "About"
+    url = "/projects/about"
+    weight = 2
+
+[[menu.main]]
+    name = "Experience"
+    url = "/experience/"
+    weight = 3
+
+[[menu.main]]
+    name = "Blog"
+    url = "/blog/"
+    weight = 4
+
+[[menu.main]]
+    name = "Github"
+    url = "https://github.com/intermezzio"
+    weight = 5
+
+[params]
+  google_analytics_id=""
+  homepage_button_link = '/experience'
+  homepage_button_text = 'Learn More'
+  homepage_intro = 'Whisper is a documentation theme built with Hugo. The design and functionality is intentionally minimal.'
+  homepage_image = '/images/terminal.gif'
+
+  [params.homepage_meta_tags]
+    meta_description = "Hugo Whisper is a documentation theme built with Hugo."
+    meta_og_title = "Hugo Whisper Theme"
+    meta_og_type = "website"
+    meta_og_url = "https://hugo-whisper.netlify.com"
+    meta_og_image = "https://raw.githubusercontent.com/JugglerX/hugo-whisper-theme/master/images/tn.png"
+    meta_og_description = "Hugo Whisper is a documentation theme built with Hugo."
+    meta_twitter_card = "summary"
+    meta_twitter_site = "@zerostaticio"
+    meta_twitter_creator = "@zerostaticio"
+
+  [params.logo]
+      mobile = "/images/logo-mobile.svg"
+      standard  = "/images/logo.svg"
