--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "www.intermezzio.github.io"
 languageCode = "en-us"
-title = "Hugo Whisper Theme"
+title = "Andrew Mascillaro"
 theme = "hugo-whisper-theme"
 publishDir = "/docs"
 
@@ -15,7 +15,7 @@ pygmentsUseClasses = true
 
 [[menu.main]]
     name = "About"
-    url = "/projects/about"
+    url = "/experience/about"
     weight = 2
 
 [[menu.main]]
@@ -37,20 +37,19 @@ pygmentsUseClasses = true
   google_analytics_id=""
   homepage_button_link = '/experience'
   homepage_button_text = 'Learn More'
-  homepage_intro = 'Whisper is a documentation theme built with Hugo. The design and functionality is intentionally minimal.'
-  homepage_image = '/images/terminal.gif'
+  homepage_intro = 'Andrew Mascillaro is an engineering student at Olin College of Engineering.'
+  homepage_image = 'git-puns.gif'
+  homepage_caption = "yes"
 
   [params.homepage_meta_tags]
     meta_description = "Hugo Whisper is a documentation theme built with Hugo."
-    meta_og_title = "Hugo Whisper Theme"
+    meta_og_title = "Andrew Mascillaro"
     meta_og_type = "website"
-    meta_og_url = "https://hugo-whisper.netlify.com"
-    meta_og_image = "https://raw.githubusercontent.com/JugglerX/hugo-whisper-theme/master/images/tn.png"
-    meta_og_description = "Hugo Whisper is a documentation theme built with Hugo."
-    meta_twitter_card = "summary"
-    meta_twitter_site = "@zerostaticio"
-    meta_twitter_creator = "@zerostaticio"
+    meta_og_url = "https://intermezzio.github.io"
+    meta_og_image = "intermezzio_logo.png"
+    meta_og_caption = "yes" 
+    meta_og_description = "Andrew Mascillaro is an engineering student at Olin College of Engineering."
 
   [params.logo]
-      mobile = "/images/logo-mobile.svg"
-      standard  = "/images/logo.svg"
+      mobile = "intermezzio_logo.png"
+      standard  = "intermezzio_logo.png"
