--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 
 [submodule "themes/hugo-whisper-theme"]
 	path = themes/hugo-whisper-theme
-	url = https://github.com/intermezzio/hugo-whisper-theme.git
+	url = git://github.com/intermezzio/hugo-whisper-theme.git
